--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,18 @@ body {
   main {
     flex: 1 0 auto;
   }
-  
+
  .hidden{
     visibility: hidden;
+}
+
+#letterList {
+    height: 100%; /* Full-height: remove this if you want "auto" height */
+    width: 60px; /* Set the width of the sidebar */
+    /*position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    /*z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 20px;
 }
