--- a/css/main.css
+++ b/css/main.css
@@ -12,13 +12,14 @@ body {
     visibility: hidden;
 }
 
-#letterList {
-    height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 60px; /* Set the width of the sidebar */
-    /*position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-    /*z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
-    left: 0;
-    overflow-x: hidden; /* Disable horizontal scroll */
+/* #alphabet {
+    height: 100%;
+    width: 60px; 
+    /*position: fixed;*/
+    /*z-index: 1; */
+    /*top: 0;*/ 
+    /* left: 0;
+    overflow-x: hidden; 
     padding-top: 20px;
-}
+} */
+
